src/css/style.css
/* ... */
.bio-heading {
  display: block;
  font-size: 3rem;
  line-height: 1.1;
  margin: 25px 0 0;
  width: auto;
  padding-left: 3px;
  padding-right: 130px;
}

.bio-sub {
  display: inline-block;
  font-size: 1.6rem;
  line-height: 1;
  margin: 0 0 8px;
  color: #f36d21;
  width: 100%;
  padding-left: 3px;
  padding-right: 130px;
}

.linkedin-container {
  padding-left: 3px;
}

.bio-real-image {
  display: block;
  position: absolute;
  right: 0;
  top: 0;
  width: 120px;
  height: 120px;
  border-radius: 100%;
}

.bio-body {
  text-align: left;
  font-size: 1.4rem;
  line-height: 1.5;
}

.grid-sizer {
  width: 100%;
}

.loader {
  display: block;
  position: absolute;
  left: 50%;
  top: 50%;
  margin: -15px 0 0 -15px;
  font-size: 3rem;
  line-height: 1;
  color: #ccc;
  transition: opacity 300ms ease;
  -webkit-animation: rotating 1s linear infinite;
  animation: rotating 1s linear infinite;
}

.loader.off {
  opacity: 0;
}

.person-image {
  display: inline-block;
  height: 100%;
  width: auto;
  visibility: hidden;
  opacity: 0;
  transform: scale(1);
  -webkit-transform: translateY(30px);
  -webkit-transition: all 1000ms ease;
  transform: translateY(30px);
  transition: all 1000ms ease;
}

.person-wrap:hover .person-image {
  animation-name: jiggle;
  animation-duration: .75s;
  animation-direction: alternate;
  animation-delay: 0;
  timing-function: ease-in-out;
}

.person-name-hover {
  margin: 0;
  position: absolute;
  width: 100%;
  font-size: 16px;
  text-align: center;
  line-height: 1.5;
  bottom: -30px;
  transition: opacity 800ms ease;
}

.loaded .person-image {
  opacity: 1;
  transform: translateY(0);
}

.burst-wrap {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: -33px;
  margin-left: -33px;
  width: 67px;
  height: 67px;
  text-align: center;
}

.burst {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 2;
}

.burst-shadow {
  position: absolute;
  left: 3px;
  top: 3px;
  z-index: 1;
}

.burst-text {
  position: absolute;
  color: #fff;
  z-index: 10;
  text-align: center;
  width: 100%;
  display: inline-block;
  top: 25px;
  left: 0;
  line-height: 1;
  font-size: 1.8rem;
  text-shadow: 2px 2px 0px rgba(0,0,0,0.2);
  visibility: visible;
}

#person-matisse .person-image {
  width: 100%;
  height: auto;
}

#person-matisse .burst-wrap {
  margin-top: 55px;
}

.scale-in {
  transform: scale(0);
}

.loaded:hover .scale-in {
  -webkit-animation: scale-in 600ms cubic-bezier(0.25, 0.1, 0.38, 1.42);
  animation: scale-in 600ms cubic-bezier(0.25, 0.1, 0.38, 1.42);
  -webkit-animation-fill-mode:forwards;
  animation-fill-mode:forwards;
}

.bio-rotate {
  -webkit-animation: rotating 4s linear infinite;
  animation: rotating 4s linear infinite;
}

@-webkit-keyframes scale-in {
  0% {
    -webkit-transform: scale(0);
    transform: scale(0);
  }
  60% {
    -webkit-transform: scale(1.2);
    transform: scale(1.2);
  }
  80% {
    -webkit-transform: scale(.8);
    transform: scale(.8);
  }
  90% {
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
  }
  100% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}

@keyframes scale-in {
  0% {
    -webkit-transform: scale(0);
    transform: scale(0);
  }
  60% {
    -webkit-transform: scale(1.2);
    transform: scale(1.2);
  }
  80% {
    -webkit-transform: scale(.8);
    transform: scale(.8);
  }
  90% {
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
  }
  100% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}

@-webkit-keyframes rotating {
  from {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes rotating {
  from {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

/*-----------------------------------------------------
  Careers Page:
------------------------------------------------------*/

#should-will {
  position: relative;
  display: inline-block;
  margin: 100px 0 150px;
}

#should-will-mobile {
  margin: 100px 0;
}

.julia-overlay {
  height: 695px;
  position: absolute;
  left: 50%;
  margin-left: -110px;
  top: 0px;
  z-index: 1;
}

#should-will .row {
  margin: 20px 0;
}

#should-will .cell {
  width: 40%;
}

#should-will .division {
  position: relative;
  background: url(../img/careers/dash.png) repeat-x center;
  width: 20%;
}

#should-will .division:before,
#should-will .division:after {
  display: block;
  content: '';
  position: absolute;
  left: -35px;
  top: 50%;
  margin-top: -33px;
  width: 27px;
  height: 66px;
  background: url(../img/careers/bracket-left.png) no-repeat;
  background-size: 27px 66px;
}

#should-will .division:after {
  left: inherit;
  right: -35px;
  top: 50%;
  margin-top: -33px;
  background: url(../img/careers/bracket-right.png) no-repeat;
  background-size: 27px 66px;
}

#should-will .cell {
  height: 65px;
  vertical-align: middle;
  font-size: 20px;
  position: relative;
}

#should-will .row .cell:first-of-type {
  text-align: right;
  padding-right: 75px;
  padding-left: 10%
}

#should-will .row .cell:first-of-type .more-text-wrapper {
  float: right;
  margin-left: 90%;
}

#should-will .row .cell:last-of-type {
    text-align: left;
    padding-left: 75px;
    padding-right: 10%;
}

#should-will .more-text-wrapper {
  position: relative;
  width: 19px;
  height: 5px;
}

#should-will .more-text {
  width: 240px;
  padding: 18px;
  background: #f36d21;
  color: #fff;
  border-radius: 5px;
  display: block;
  position: absolute;
  top: 40px;
  left: -110px;
  font-family: 'chelthmitc_bk_btbold_italic', serif;
  line-height: 1.3;
  font-size: 1.4rem;
  z-index: 1;
  text-align: center;
  transition: all 500ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
  opacity: 0;
  pointer-events: none;
}

#should-will .cell:hover .more-text {
  top: 10px;
  opacity: 1;
}
/* ... */

